--- a/app/index.html
+++ b/app/index.html
@@ -8,17 +8,19 @@
     <title>Angro</title>
     <link rel="icon" href="images/favicon.png"/><!--build:css css/styles.min.css-->
     <link rel="stylesheet" href="css/libs/aos.css"/>
+    <link rel="stylesheet" href="css/libs/slick.css"/>
+    <link rel="stylesheet" href="css/libs/slick-theme.css"/>
     <link rel="stylesheet" href="css/global.min.css"/><!--endbuild-->
 <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
   <body><!-- sprite -->
 <svg class="hidden">
-        <symbol viewBox="0 0 61 48" fill="none" xmlns="http://www.w3.org/2000/svg" id="apartament">
+        <symbol viewBox="0 0 61 48" xmlns="http://www.w3.org/2000/svg" id="apartament">
         <path d="M.123 0c2.32.348 4.505.669 6.684 1.007 7.664 1.182 15.313 2.5 23.004 3.478 2.125.269 4.389-.41 6.573-.743A3841.975 3841.975 0 0 0 59.497.15C60.612-.027 61.005.234 61 1.456c-.047 9.747-.04 19.494-.005 29.241.003.926-.328 1.383-1.116 1.792a8837.18 8837.18 0 0 0-28.394 14.805c-.654.343-1.183.454-1.923.067A6549.364 6549.364 0 0 0 .94 32.455c-.594-.309-.942-.622-.94-1.385C.027 21.034.017 11 .022.965c0-.24.05-.479.101-.965zm30.85 25.993l28.988 5.045V1.022L30.974 5.576v20.417zm27.675 5.97c-.311-.11-.447-.182-.59-.207-7.879-1.394-15.752-2.82-23.643-4.151-1.792-.301-3.688-.595-5.455-.336-5.845.857-11.65 1.967-17.473 2.984-3.011.526-6.022 1.061-9.28 1.634.395.277.565.43.762.533 8.918 4.643 17.833 9.29 26.773 13.892.405.21 1.118.175 1.535-.04 8.827-4.554 17.631-9.147 26.438-13.738.274-.14.525-.319.933-.57zM.992 1.01v30.045l11.152-1.967V9.87c0-.666-.114-1.372.97-1.25 2.776.305 5.553.624 8.337.823 1.054.077 1.286.506 1.282 1.46-.035 5.017-.015 10.033-.015 15.05v1.358l7.15-1.308V5.556C20.245 4.038 10.653 2.527.992 1.01zm16.3 27.23V9.951l-4.129-.437v19.423c1.41-.24 2.737-.464 4.13-.699zm4.419-.8V10.373l-3.831-.358v18.07c1.318-.22 2.555-.43 3.83-.647z"
-            fill="#fff"></path>
+            ></path>
         <path d="M56.039 14.881c0 1.15-.015 2.298.005 3.448.014.898-.3 1.395-1.299 1.318-2.574-.197-5.153-.358-7.728-.538-.753-.052-1.066-.476-1.059-1.222.018-1.888.018-3.776 0-5.664-.007-.746.302-1.146 1.062-1.217 2.448-.232 4.894-.494 7.343-.713 1.476-.131 1.666.059 1.678 1.51.005 1.024-.002 2.051-.002 3.078zm-5.095.017h4.164V11.04c-1.451.149-2.784.287-4.164.427v3.431zm4.191 3.945v-3.547H50.89c0 .915-.044 1.732.025 2.54.024.273.313.725.523.75 1.202.14 2.416.178 3.697.257zm-8.26-3.955h3.716v-3.342c-3.872-.02-4.082.158-3.825 3.16.002.034.039.066.108.182zm3.748.35h-3.838v3.022l3.838.244V15.24z"
-            fill="#fff"></path>
+            ></path>
         </symbol>
         <symbol viewBox="0 0 45 85" fill="none" xmlns="http://www.w3.org/2000/svg" id="arrow">
         <path d="M6.227 42.453c2.368 2.356 4.576 4.535 6.768 6.734A76058.45 76058.45 0 0 1 44.067 80.35c1.167 1.17 1.24 2.776.195 3.853-1.086 1.118-2.682 1.058-3.894-.16L1.127 44.7c-1.505-1.51-1.505-2.877.014-4.4C14.178 27.224 27.217 14.147 40.25 1.066c.801-.806 1.67-1.305 2.846-.947 1.821.553 2.495 2.668 1.313 4.164-.214.27-.469.506-.712.75C31.532 17.234 19.368 29.436 7.2 41.633c-.266.264-.57.482-.974.82z"
@@ -113,7 +115,7 @@
 </html><!-- info popup -->
 <div class="info" data-aos="fade-down" data-aos-anchor="#about" data-aos-easing="linear" data-aos-duration="400" data-aos-anchor-placement="bottom"><a class="link">
     <p class="top">+38(050) 634 71 78</p>
-    <p class="bottom active" href="tel:+38(050)-634-71-78">Заказать звонок</p></a><a class="link">
+    <p class="bottom active" href="tel:+380506347178">Заказать звонок</p></a><a class="link">
     <svg class="top">
       <use xlink:href="#apartament"></use>
     </svg>
@@ -171,58 +173,112 @@
 <section class="about" id="about">
   <div class="container">
     <div class="grid">
-      <div class="headline">Angro.com.ua - Дом в Полтаве или Миргороде, новостройка, что бы вы не искали о недвижимости в Полтаве или Миргороде ответы есть на Angro.com.ua.</div>
-      <div class="title">О нас</div>
-      <div class="tile">
-        <svg>
-          <use xlink:href="#chalice"></use>
-        </svg>
-        <h3 class="tile__head">Профессионализм</h3>
-        <p class="tile__text">Сочитаем експертность и креативный подход</p>
-      </div>
-      <div class="tile">
-        <svg>
-          <use xlink:href="#star"></use>
-        </svg>
-        <h3 class="tile__head">Качество</h3>
-        <p class="tile__text">Все наши объекты выдержали проверку временем</p>
-      </div>
-      <div class="tile">
-        <svg>
-          <use xlink:href="#briefcase"></use>
-        </svg>
-        <h3 class="tile__head">Опыт</h3>
-        <p class="tile__text">Спроектировали, построили и управляем 4 объктами.</p>
-      </div><a class="link sm-button" href="#">
-        <div class="svg-wrap">
-          <svg>
-            <use xlink:href="#arrow"></use>
-          </svg>
+      <h3 class="headline">Angro.com.ua - Дом в Полтаве или Миргороде, новостройка, что бы вы не искали о недвижимости в Полтаве или Миргороде ответы есть на Angro.com.ua.</h3>
+      <h2 class="title">О нас</h2>
+      <div class="slider">
+        <div class="tile">
+          <div class="svg__wrap">
+            <svg>
+              <use xlink:href="#chalice"></use>
+            </svg>
+          </div>
+          <h3 class="tile__head">Профессионализм</h3>
+          <p class="tile__text">Сочитаем експертность и креативный подход</p>
         </div>
-        <p>Прокрутить вниз</p></a>
+        <div class="tile">
+          <div class="svg__wrap">
+            <svg>
+              <use xlink:href="#star"></use>
+            </svg>
+          </div>
+          <h3 class="tile__head">Качество</h3>
+          <p class="tile__text">Все наши объекты выдержали проверку временем</p>
+        </div>
+        <div class="tile">
+          <div class="svg__wrap">
+            <svg>
+              <use xlink:href="#briefcase"></use>
+            </svg>
+          </div>
+          <h3 class="tile__head">Опыт</h3>
+          <p class="tile__text">Спроектировали, построили и управляем 4 объктами.</p>
+        </div>
+        <div class="tile">
+          <div class="svg__wrap">
+            <svg>
+              <use xlink:href="#chalice"></use>
+            </svg>
+          </div>
+          <h3 class="tile__head">Профессионализм</h3>
+          <p class="tile__text">Сочитаем експертность и креативный подход</p>
+        </div>
+      </div>
+      <div class="link-wrap"><a class="link sm-button" href="#">
+          <div class="svg-wrap">
+            <svg>
+              <use xlink:href="#arrow"></use>
+            </svg>
+          </div>
+          <p>Узнать больше</p></a></div>
     </div>
   </div>
 </section>
 <section class="objects">
   <div class="container">
-    <div class="grid">
-      <div class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</div>
-      <div class="title">Наши объекты</div>
+    <div class="objects-slider">
+      <div class="objects-content">
+        <div class="slide">
+          <div class="text"> 
+            <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+            <h2 class="title">Наши объекты</h2>
+            <h4 class="text__headline">ЖК "На Сенной"</h4>
+            <p class="text__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
+            <div class="link-wrap"><a class="link sm-button" href="#">
+                <div class="svg-wrap">
+                  <svg>
+                    <use xlink:href="#arrow"></use>
+                  </svg>
+                </div>
+                <p>Посмотреть квартиры объекта</p></a><a class="link sm-button" href="#">
+                <div class="svg-wrap">
+                  <svg>
+                    <use xlink:href="#arrow"></use>
+                  </svg>
+                </div>
+                <p>Посмотреть все объекты</p></a></div>
+          </div>
+          <div class="image__wrap"><img src="images/object_img1.jpg"/>
+            <div class="icon_wrap"><a class="link">
+                <p>Детсад</p>
+                <svg>
+                  <use xlink:href="#puzzle">      </use>
+                </svg></a><a class="link">
+                <p>Школа</p>
+                <svg>
+                  <use xlink:href="#castle"> </use>
+                </svg></a><a class="link">
+                <p>Парк</p>
+                <svg>
+                  <use xlink:href="#park"></use>
+                </svg></a></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
 <section class="articles">
   <div class="container">
     <div class="grid">
-      <div class="headline">Строительство жилых домов сопряжено со множеством проблем.</div>
-      <div class="title">Статьи</div>
+      <h3 class="headline">Строительство жилых домов сопряжено со множеством проблем.</h3>
+      <h2 class="title">Статьи</h2>
     </div>
   </div>
 </section>
 <footer></footer><!-- modal -->
 <div class="modal">
-  <div class="modal-content">
-    <form action="">
+  <div class="modal__content">
+    <form class="grid" action="">
       <fieldset>
         <legend>Оставьте координаты, и мы с вами свяжемся</legend>
       </fieldset>
@@ -246,4 +302,5 @@
 <!--build:js js/main.min.js -->
 <script src="js/libs/jquery.min.js"></script>
 <script src="js/libs/aos.js"></script>
+<script src="js/libs/slick.min.js"></script>
 <script src="js/main.js"></script><!--endbuild-->
