add section article, add section apart]ments

--- a/app/index.html
+++ b/app/index.html
@@ -223,9 +223,47 @@
     </div>
   </div>
 </section>
-<section class="objects">
+<section class="objects" id="objects">
   <div class="container">
     <div class="objects-slider">
+      <div class="objects-content">
+        <div class="slide">
+          <div class="text"> 
+            <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+            <h2 class="title">Наши объекты</h2>
+            <h4 class="text__headline">ЖК "На Сенной"</h4>
+            <p class="text__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
+            <div class="link-wrap"><a class="link sm-button" href="#">
+                <div class="svg-wrap">
+                  <svg>
+                    <use xlink:href="#arrow"></use>
+                  </svg>
+                </div>
+                <p>Посмотреть квартиры объекта</p></a><a class="link sm-button" href="#">
+                <div class="svg-wrap">
+                  <svg>
+                    <use xlink:href="#arrow"></use>
+                  </svg>
+                </div>
+                <p>Посмотреть все объекты</p></a></div>
+          </div>
+          <div class="image__wrap"><img src="images/object_img1.jpg"/>
+            <div class="icon_wrap"><a class="link">
+                <p>Детсад</p>
+                <svg>
+                  <use xlink:href="#puzzle">      </use>
+                </svg></a><a class="link">
+                <p>Школа</p>
+                <svg>
+                  <use xlink:href="#castle"> </use>
+                </svg></a><a class="link">
+                <p>Парк</p>
+                <svg>
+                  <use xlink:href="#park"></use>
+                </svg></a></div>
+          </div>
+        </div>
+      </div>
       <div class="objects-content">
         <div class="slide">
           <div class="text"> 
@@ -267,11 +305,134 @@
     </div>
   </div>
 </section>
-<section class="articles">
+<section class="articles" id="articles">
+  <div class="bg__animate">
+    <div class="bg__img"><img src="images/acticlebg1.jpg"/></div>
+    <div class="bg__img"><img src="images/acticlebg2.jpg"/></div>
+  </div>
   <div class="container">
     <div class="grid">
       <h3 class="headline">Строительство жилых домов сопряжено со множеством проблем.</h3>
       <h2 class="title">Статьи</h2>
+      <div class="articles__content">
+        <div class="article">
+          <h4 class="article__titile">ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ</h4>
+          <p class="article__text">Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...</p>
+        </div>
+        <div class="article">
+          <h4 class="article__titile">ДОЛЛАР В КВАДРАТЕ: КАК «КВАРТИРНЫЙ ВОПРОС»  СПАСАЕТ НАКОПЛЕНИЯ УКРАИНЦЕВ</h4>
+          <p class="article__text">Экономический кризис в Украине продолжается. Украинцы спасают свои сбережения, вкладывая их в квадратные метры. Щедрые предложения банков, сулящих высокие проценты, не могут победить страх потерять «нажитое непосильным трудом». Все уменьшающееся доверие к банковским сейфам и хранению «под подушкой» приводит к тому, что накопления вкладываются в фактически любую недвижимость, на которую этих накоплений хватает. О том, как и почему застройщики заняли место банков, рассказывает банкир Василий Невмержицкий...</p>
+        </div>
+      </div><a class="link sm-button" href="#">
+        <div class="svg-wrap">
+          <svg>
+            <use xlink:href="#arrow"></use>
+          </svg>
+        </div>
+        <p>Посмотреть все статьи</p></a>
+    </div>
+  </div>
+</section>
+<section class="apartments" id="apartments">
+  <div class="container">
+    <div class="grid">
+      <div class="head-wrap">
+        <h3 class="headline">Только лучшее для амбициозных и успешных</h3>
+        <h2 class="title">Квартиры в новостройках</h2>
+      </div>
+      <div class="apartments-slider">
+        <div class="slide">
+          <div class="slide__name">ЖК "Остров"</div>
+          <div class="slide__img"><img src="images/object_img1.jpg"/></div>
+          <div class="slide__icon">
+            <svg>
+              <use xlink:href="#castle"></use>
+            </svg>
+          </div>
+          <div class="slide__title">Выразительная архитектура</div>
+          <div class="slide__link link">Смотреть квартиры объекта</div>
+        </div>
+        <div class="slide">
+          <div class="slide__name">ЖК "Мирного"</div>
+          <div class="slide__img"><img src="images/object_img1.jpg"/></div>
+          <div class="slide__icon">
+            <svg>
+              <use xlink:href="#castle"></use>
+            </svg>
+          </div>
+          <div class="slide__title">Транспортная доступность</div>
+          <div class="slide__link link">Смотреть квартиры объекта</div>
+        </div>
+        <div class="slide">
+          <div class="slide__name">ЖК "Победы"</div>
+          <div class="slide__img"><img src="images/object_img1.jpg"/></div>
+          <div class="slide__icon">
+            <svg>
+              <use xlink:href="#castle"></use>
+            </svg>
+          </div>
+          <div class="slide__title">Развитая ифраструктура </div>
+          <div class="slide__link link">Смотреть квартиры объекта</div>
+        </div>
+        <div class="slide">
+          <div class="slide__name">ЖК "Остров"</div>
+          <div class="slide__img"><img src="images/object_img1.jpg"/></div>
+          <div class="slide__icon">
+            <svg>
+              <use xlink:href="#castle"></use>
+            </svg>
+          </div>
+          <div class="slide__title">Выразительная архитектура</div>
+          <div class="slide__link link">Смотреть квартиры объекта</div>
+        </div>
+        <div class="slide">
+          <div class="slide__name">ЖК "Мирного"</div>
+          <div class="slide__img"><img src="images/object_img1.jpg"/></div>
+          <div class="slide__icon">
+            <svg>
+              <use xlink:href="#castle"></use>
+            </svg>
+          </div>
+          <div class="slide__title">Транспортная доступность</div>
+          <div class="slide__link link">Смотреть квартиры объекта</div>
+        </div>
+        <div class="slide">
+          <div class="slide__name">ЖК "Победы"</div>
+          <div class="slide__img"><img src="images/object_img1.jpg"/></div>
+          <div class="slide__icon">
+            <svg>
+              <use xlink:href="#castle"></use>
+            </svg>
+          </div>
+          <div class="slide__title">Развитая ифраструктура </div>
+          <div class="slide__link link">Смотреть квартиры объекта</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="contact" id="info">
+  <div class="container">
+    <div class="form-wrap">
+      <form class="grid" action="">
+        <fieldset>
+          <legend>С удовольствием проконсультируем Вас!</legend>
+        </fieldset>
+        <label for="username">Ваше имя
+          <input id="username" type="text" required="required"/>
+        </label>
+        <label for="tel">Телефон
+          <input id="tel" type="tel" required="required"/>
+        </label>
+        <label for="email">EMAIL (НЕ ОБЯЗАТЕЛЬНО)
+          <input id="email" type="email"/>
+        </label>
+        <div class="checkbox-wrap">
+          <input id="check" type="checkbox"/>
+          <label for="check">Я даю согласие на обработку моих персональных данных согласно </label><a class="link">политике конфиденциальности </a>
+        </div>
+        <button>Отправить запрос</button>
+      </form>
     </div>
   </div>
 </section>
