fix sidebar, info-popup;

--- a/app/index.html
+++ b/app/index.html
@@ -17,13 +17,13 @@
   <body>
     <!--POPUP START-->
     <div class="info" data-aos="fade-down" data-aos-anchor="#about" data-aos-easing="linear" data-aos-duration="400" data-aos-anchor-placement="bottom">
-      <div class="link"><a class="top" href="tel:+380506347178">+38(050) 634 71 78</a>
-        <p class="bottom active">Заказать звонок</p>
-      </div><a class="link">
-        <svg class="top">
+      <div class="info-block info-left"><a class="info-text" href="tel:+380506347178">+38(050) 634 71 78</a>
+        <p class="info-link link--active">Заказать звонок</p>
+      </div><a class="info-block info-right">
+        <svg class="info-icon">
           <use xlink:href="images/main-page_icons-sprite.svg#apartament"></use>
         </svg>
-        <p class="bottom">Выбрать<br>квартиру</p></a>
+        <p class="info-link">Выбрать<br>квартиру</p></a>
     </div>
     <!--POPUP END-->
     <!--SIDEBAR-->
@@ -35,7 +35,7 @@
           </svg></a>
         <!-- LOGO END -->
         <!-- LANG SELECT START-->
-        <div class="sidebar-lang"><a class="link active" href="#">UA</a><a class="link" href="#">RU</a></div>
+        <div class="sidebar-lang"><a class="sidebar-lang__link link--active" href="#">UA</a><a class="sidebar-lang__link" href="#">RU</a></div>
         <!-- LANG SELECT END-->
         <div class="sidebar-menu">
           <div class="sidebar-menu__triger">Меню</div>
@@ -460,7 +460,7 @@
               <!--TILE IMG--><img src="images/apartaments/apartaments1.jpg"/>
             </div>
             <div class="apartments-tile__icon">
-              <svg>
+              <svg class="apartments-tile__svg">
                 <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
               </svg>
             </div>
@@ -473,7 +473,7 @@
               <!--TILE IMG--><img src="images/apartaments/apartaments2.jpg"/>
             </div>
             <div class="apartments-tile__icon">
-              <svg>
+              <svg class="apartments-tile__svg">
                 <use xlink:href="images/main-page_icons-sprite.svg#location"></use>
               </svg>
             </div>
@@ -486,7 +486,7 @@
               <!--TILE IMG--><img src="images/apartaments/apartaments3.jpg"/>
             </div>
             <div class="apartments-tile__icon">
-              <svg>
+              <svg class="apartments-tile__svg">
                 <use xlink:href="images/main-page_icons-sprite.svg#interest-points"></use>
               </svg>
             </div>
@@ -494,16 +494,16 @@
           </div>
           <!--SLIDER TILE-->
           <div class="apartments-tile">
-            <div class="apartments-tile__name">ЖК "Остров"</div>
+            <div class="apartments-tile__name">ЖК "На сенной"</div>
             <div class="apartments-tile__img">
               <!--TILE IMG--><img src="images/apartaments/apartaments1.jpg"/>
             </div>
             <div class="apartments-tile__icon">
-              <svg>
-                <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
+              <svg class="apartments-tile__svg">
+                <use xlink:href="images/main-page_icons-sprite.svg#layout"></use>
               </svg>
             </div>
-            <div class="apartments-tile__title">Выразительная архитектура</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+            <div class="apartments-tile__title">Множество планировок</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
           </div>
         </div>
       </div>
