--- a/app/index.html
+++ b/app/index.html
@@ -70,8 +70,8 @@
     <!--HEADER START -->
     <header class="header" id="header"> 
       <div class="header-content">
-        <h1 class="header-content__title">Современное <br> жилье в Полтаве и <br> Миргороде</h1>
-        <p class="header-content__text">Новые квартиры от застройщика в престижном <br> районе Полтавы и Миргорода</p><a class="arrow-btn" href="#about">
+        <h1 class="header-content__title" data-aos="fade-left">Современное <br> жилье в Полтаве и <br> Миргороде</h1>
+        <p class="header-content__text" data-aos="fade-right">Новые квартиры от застройщика в престижном <br> районе Полтавы и Миргорода</p><a class="arrow-btn" href="#about">
           <div class="arrow-btn__icon">
             <svg class="icon">
               <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
@@ -183,27 +183,25 @@
         <!--SLIDER BUTTON END -->
         <div class="objects-slider">
           <!-- TILE START-->
-          <div class="objects-tile"> 
-            <div class="objects-tile__info"> 
-              <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-              <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "На Сенной"</a>
-              <p class="objects-tile__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
-              <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
-            </div>
-            <div class="objects-tile__illustration">
-              <!--IMAGE--><img class="objects-tile__img" src="images/objects/object_img1.jpg"/>
+          <div class="objects-tile grid">
+            <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+            <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "На Сенной"</a>
+            <p class="objects-tile__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
+            <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
+                <div class="arrow-btn__icon">
+                  <svg class="icon">
+                    <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                  </svg>
+                </div>
+                <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a><a class="arrow-btn arrow-btn--left" href="#">
+                <div class="arrow-btn__icon">
+                  <svg class="icon">
+                    <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                  </svg>
+                </div>
+                <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
+            <!--IMAGE-->
+            <div class="objects-tile__illustration"><img class="objects-tile__img" src="images/objects/object_img1.jpg"/>
               <div class="objects-tile__icons">
                 <div class="objects-tile__icon">
                   <p class="objects-tile__icon-text">Детсад</p>
@@ -228,25 +226,23 @@
           </div>
           <!--TILE END-->
           <!--TILE STRAT-->
-          <div class="objects-tile">
-            <div class="objects-tile__info"> 
-              <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-              <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Остров"</a>
-              <p class="objects-tile__text">В центре города-курорта Миргород ведется строительство нового многоэтажного жилого дома по адресу ул. Гоголя, 77. Комплекс расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, мини-рынок, социальные службы города. На придомовой территории будут оборудованы детская площадка и автостоянка, произведено озеленение.</p>
-              <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
-            </div>
+          <div class="objects-tile grid">
+            <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+            <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Остров"</a>
+            <p class="objects-tile__text">В центре города-курорта Миргород ведется строительство нового многоэтажного жилого дома по адресу ул. Гоголя, 77. Комплекс расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, мини-рынок, социальные службы города. На придомовой территории будут оборудованы детская площадка и автостоянка, произведено озеленение.</p>
+            <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
+                <div class="arrow-btn__icon">
+                  <svg class="icon">
+                    <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                  </svg>
+                </div>
+                <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a><a class="arrow-btn arrow-btn--left" href="#">
+                <div class="arrow-btn__icon">
+                  <svg class="icon">
+                    <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                  </svg>
+                </div>
+                <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
             <div class="objects-tile__illustration">
               <!--IMAGE--><img class="objects-tile__img" src="images/objects/object_img2.jpg"/>
               <div class="objects-tile__icons">
@@ -263,7 +259,7 @@
                   </svg>
                 </div>
                 <div class="objects-tile__icon">
-                  <p class="objects-tile__icon-text">Детский майданчик</p>
+                  <p class="objects-tile__icon-text">Детская площадка</p>
                   <svg class="objects-icon">
                     <use xlink:href="images/main-page_icons-sprite.svg#playground"></use>
                   </svg>
@@ -273,25 +269,23 @@
           </div>
           <!--TILE END-->
           <!--TILE STRAT-->
-          <div class="objects-tile">
-            <div class="objects-tile__info"> 
-              <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-              <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Мирного"</a>
-              <p class="objects-tile__text">В центре города-курорта Миргород введен в эксплуатацию в мае 2017 года односекционного 10-этажного жилого по адресу ул. Панаса Мирного, 3. Расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, минирынок, социальные службы города. На придомовой территории оборудованы детская площадка и автостоянка, произведено озеленение.</p>
-              <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
-            </div>
+          <div class="objects-tile grid">
+            <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+            <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Мирного"</a>
+            <p class="objects-tile__text">В центре города-курорта Миргород введен в эксплуатацию в мае 2017 года односекционного 10-этажного жилого по адресу ул. Панаса Мирного, 3. Расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, минирынок, социальные службы города. На придомовой территории оборудованы детская площадка и автостоянка, произведено озеленение.</p>
+            <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
+                <div class="arrow-btn__icon">
+                  <svg class="icon">
+                    <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                  </svg>
+                </div>
+                <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a><a class="arrow-btn arrow-btn--left" href="#">
+                <div class="arrow-btn__icon">
+                  <svg class="icon">
+                    <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                  </svg>
+                </div>
+                <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
             <div class="objects-tile__illustration">
               <!--IMAGE--><img class="objects-tile__img" src="images/objects/object_img3.jpg"/>
               <div class="objects-tile__icons">
@@ -318,25 +312,23 @@
           </div>
           <!--TILE END-->
           <!--TILE STRAT-->
-          <div class="objects-tile">
-            <div class="objects-tile__info"> 
-              <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-              <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Победы"</a>
-              <p class="objects-tile__text">Построен и введен в эксплуатацию новый 108-квартирный девятиэтажный кирпичный дом по адресу ул. Победы, 10 <br> Дом имеет очень удачное расположение:<br>— центр города;<br>— непосредственная близость школы, детского сада, магазина «Фуршет»;<br>— возле дома будут обустроены автостоянки, детские площадки;<br>— 10 минут спокойной ходьбы до курорта Миргород...</p>
-              <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a><a class="arrow-btn arrow-btn--left" href="#">
-                  <div class="arrow-btn__icon">
-                    <svg class="icon">
-                      <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
-                    </svg>
-                  </div>
-                  <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
-            </div>
+          <div class="objects-tile grid">
+            <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+            <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Победы"</a>
+            <p class="objects-tile__text">Построен и введен в эксплуатацию новый 108-квартирный девятиэтажный кирпичный дом по адресу ул. Победы, 10 <br> Дом имеет очень удачное расположение:<br>— центр города;<br>— непосредственная близость школы, детского сада, магазина «Фуршет»;<br>— возле дома будут обустроены автостоянки, детские площадки;<br>— 10 минут спокойной ходьбы до курорта Миргород...</p>
+            <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
+                <div class="arrow-btn__icon">
+                  <svg class="icon">
+                    <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                  </svg>
+                </div>
+                <p class="arrow-btn__text">Посмотреть квартиры объекта</p></a><a class="arrow-btn arrow-btn--left" href="#">
+                <div class="arrow-btn__icon">
+                  <svg class="icon">
+                    <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
+                  </svg>
+                </div>
+                <p class="arrow-btn__text">Посмотреть все объекты</p></a></div>
             <div class="objects-tile__illustration">
               <!--IMAGE--><img class="objects-tile__img" src="images/objects/object_img4.jpg"/>
               <div class="objects-tile__icons">
@@ -536,25 +528,25 @@
       <div class="container">
         <div class="grid">
           <div class="footer-address">
-            <h5>Наши офисы</h5><a class="footer-link" href="#">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="#">г.Миргород, ул.Победы,10, оф.1</a><a class="footer-link" href="#">Время работы: 9:00 – 18:00</a>
+            <h5 class="footer-address__title">Наши офисы</h5><a class="footer-link" href="#">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="#">г.Миргород, ул.Победы,10, оф.1</a><a class="footer-link" href="#">Время работы: 9:00 – 18:00</a>
           </div>
           <div class="footer-logo"><a class="link" href="#"> 
-              <svg> 
+              <svg data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
                 <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
               </svg></a></div>
           <div class="footer-contacts">
-            <h5>Наши офисы</h5><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-82</a>
+            <h5 class="footer-contacts__title">Наши офисы</h5><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-82</a>
           </div>
           <div class="footer-newsletter">
-            <form class="newsletter-form" action=""></form>
-            <h5 class="newsletter-form__headline">Будьте в курсе спецпредложений </h5>
-            <div class="newsletter-form__text">
-              <label class="newsletter-form__title" for="newsletter">Ваш e-mail
-                <input class="newsletter-form__field" id="newsletter" type="text"/>
-              </label>
-              <button class="btn newsletter-form__btn">Хочу быть в курсе!</button>
-            </div>
-          </div><a class="arrow-btn footer-btn" href="#about">
+            <!--FORM START-->
+            <form class="footer-newsletter__form" action="">
+              <h5 class="footer-newsletter__headline">Будьте в курсе спецпредложений   </h5>
+              <label class="footer-newsletter__title" for="newsletter">Ваш e-mail</label>
+              <input class="footer-newsletter__field" id="newsletter" type="text"/>
+              <button class="btn footer-newsletter__btn">Хочу быть в курсе!</button>
+            </form>
+            <!--FORM END          -->
+          </div><a class="arrow-btn footer-btn" href="#header">
             <div class="arrow-btn__icon">
               <svg class="icon">
                 <use xlink:href="images/main-page_icons-sprite.svg#arrow"></use>
@@ -562,7 +554,7 @@
             </div>
             <p class="arrow-btn__text">Вверх</p></a>
           <div class="footer-backcall">
-            <p>Мы предоставляем бесплатные консультации!</p><a class="btn">Закажите звонок!</a>
+            <p class="footer-backcall__title">Мы предоставляем бесплатные консультации!</p><a class="btn">Закажите звонок!</a>
           </div>
           <div class="footer-social">
             <h6 class="footer-social__title">МЫ В СОЦСЕТЯХ</h6>
