--- a/app/index.html
+++ b/app/index.html
@@ -60,11 +60,38 @@
         <li class="menu-item"><a href="#">Галерея</a></li>
         <li class="menu-item"><a href="#">Блог</a></li>
       </ul>
+      <!--MOBILE LANG-->
+      <div class="mobile-menu__lang"><a class="mobile-menu__link link--active" href="#">UA</a><a class="mobile-menu__link" href="#">RU</a></div>
+      <!--MOBILE LANG END-->
+      <!--MOBILE LOGO--><a class="mobile-logo" href="#">             
+        <svg class="mobile-logo__icon">
+          <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
+        </svg></a>
+      <!--MOBILE LOGO END-->
+      <div class="menu-info"><a class="menu-info__item" href="#">
+          <svg class="menu-info__icon">
+            <use xlink:href="images/main-page_icons-sprite.svg#apartament"></use>
+          </svg>
+          <div class="menu-info__text"> 
+            <p class="info-link">Выбрать квартиру</p>
+          </div></a><a class="menu-info__item" href="tel:+380506347178">
+          <svg class="menu-info__icon">
+            <use xlink:href="images/main-page_icons-sprite.svg#phone"></use>
+            <div class="menu-info__text"> 
+              <p>+38(050) 634 71 78</p>
+              <p class="link--active">Заказать звонок</p>
+            </div>
+          </svg></a></div>
       <ul class="menu-footer">
         <li class="menu-item"><a class="link--active" href="#">Выбрать квартиру</a></li>
         <li class="menu-item"><a href="tel:+38(050)-991-58-80">+38 (050) 991 58 80</a></li>
         <li class="menu-item"><a class="link--email" href="mailto:angrobud@gmail.com">angrobud@gmail.com</a></li>
       </ul>
+    </div>
+    <div class="mobile-menu">
+      <svg class="mobile-menu__icon">
+        <use xlink:href="images/main-page_icons-sprite.svg#menu icon"></use>
+      </svg>
     </div>
     <!--SIDEBAR END-->
     <!--HEADER START -->
@@ -181,11 +208,17 @@
           <use xlink:href="images/main-page_icons-sprite.svg#arrow"> </use>
         </svg>
         <!--SLIDER BUTTON END -->
+        <div class="objects__title">
+          <div class="container">
+            <div class="grid">
+              <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
+              <h2 class="title">Наши объекты</h2>
+            </div>
+          </div>
+        </div>
         <div class="objects-slider">
           <!-- TILE START-->
-          <div class="objects-tile grid">
-            <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-            <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "На Сенной"</a>
+          <div class="objects-tile grid">          <a class="objects-tile__headline link--active" href="#">ЖК "На Сенной"</a>
             <p class="objects-tile__text">Жилищный комплекс «На Сенной» состоит из двух 8-ми этажных жилых домов в самом центре города. Комплекс расположен в тихом, уютном районе города. Разнообразие планировочных решений позволит каждому найти жилье на свой вкус. Рядом с домом находятся детский сад, общеобразовательная школа, магазины.</p>
             <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
                 <div class="arrow-btn__icon">
@@ -226,9 +259,7 @@
           </div>
           <!--TILE END-->
           <!--TILE STRAT-->
-          <div class="objects-tile grid">
-            <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-            <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Остров"</a>
+          <div class="objects-tile grid"><a class="objects-tile__headline link--active" href="#">ЖК "Остров"</a>
             <p class="objects-tile__text">В центре города-курорта Миргород ведется строительство нового многоэтажного жилого дома по адресу ул. Гоголя, 77. Комплекс расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, мини-рынок, социальные службы города. На придомовой территории будут оборудованы детская площадка и автостоянка, произведено озеленение.</p>
             <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
                 <div class="arrow-btn__icon">
@@ -269,9 +300,7 @@
           </div>
           <!--TILE END-->
           <!--TILE STRAT-->
-          <div class="objects-tile grid">
-            <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-            <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Мирного"</a>
+          <div class="objects-tile grid"><a class="objects-tile__headline link--active" href="#">ЖК "Мирного"</a>
             <p class="objects-tile__text">В центре города-курорта Миргород введен в эксплуатацию в мае 2017 года односекционного 10-этажного жилого по адресу ул. Панаса Мирного, 3. Расположен в тихом месте, недалеко от школы и детского садика. Рядом находятся магазины, минирынок, социальные службы города. На придомовой территории оборудованы детская площадка и автостоянка, произведено озеленение.</p>
             <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
                 <div class="arrow-btn__icon">
@@ -312,9 +341,7 @@
           </div>
           <!--TILE END-->
           <!--TILE STRAT-->
-          <div class="objects-tile grid">
-            <h3 class="headline">ТОЛЬКО ЛУЧШЕЕ ДЛЯ АМБИЦИОЗНЫХ И УСПЕШНЫХ</h3>
-            <h2 class="title">Наши объекты</h2><a class="objects-tile__headline link--active" href="#">ЖК "Победы"</a>
+          <div class="objects-tile grid"><a class="objects-tile__headline link--active" href="#">ЖК "Победы"</a>
             <p class="objects-tile__text">Построен и введен в эксплуатацию новый 108-квартирный девятиэтажный кирпичный дом по адресу ул. Победы, 10 <br> Дом имеет очень удачное расположение:<br>— центр города;<br>— непосредственная близость школы, детского сада, магазина «Фуршет»;<br>— возле дома будут обустроены автостоянки, детские площадки;<br>— 10 минут спокойной ходьбы до курорта Миргород...</p>
             <div class="objects-tile__links"><a class="arrow-btn arrow-btn--left" href="#">
                 <div class="arrow-btn__icon">
