--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <!--POPUP START-->
     <div class="info" data-aos="fade-down" data-aos-anchor="#about" data-aos-easing="linear" data-aos-duration="400" data-aos-anchor-placement="bottom">
       <div class="info-block info-left"><a class="info-text" href="tel:+380506347178">+38(050) 634 71 78</a>
-        <p class="info-link link--active">Заказать звонок</p>
+        <p class="open-modal info-link link--active">Заказать звонок</p>
       </div><a class="info-block info-right">
         <svg class="info-icon">
           <use xlink:href="images/main-page_icons-sprite.svg#apartament"></use>
@@ -74,14 +74,17 @@
           </svg>
           <div class="menu-info__text"> 
             <p class="info-link">Выбрать квартиру</p>
-          </div></a><a class="menu-info__item" href="tel:+380506347178">
+          </div></a>
+        <div class="menu-info__item">
           <svg class="menu-info__icon">
             <use xlink:href="images/main-page_icons-sprite.svg#phone"></use>
-            <div class="menu-info__text"> 
-              <p>+38(050) 634 71 78</p>
+            <!--CLASS CHANGE!!!-->
+            <div class="menu-info__text"> <a href="tel:+380506347178">+38(050) 634 71 78</a>
               <p class="link--active">Заказать звонок</p>
             </div>
-          </svg></a></div>
+          </svg>
+        </div>
+      </div>
       <ul class="menu-footer">
         <li class="menu-item"><a class="link--active" href="#">Выбрать квартиру</a></li>
         <li class="menu-item"><a href="tel:+38(050)-991-58-80">+38 (050) 991 58 80</a></li>
@@ -483,7 +486,7 @@
                 <use xlink:href="images/main-page_icons-sprite.svg#tover"></use>
               </svg>
             </div>
-            <div class="apartments-tile__title">Выразительная архитектура</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+            <div class="apartments-tile__title">Выразительная архитектура</div><a class="apartments-tile__link link" href="#">Смотреть квартиры объекта</a>
           </div>
           <!--SLEDER TILE-->
           <div class="apartments-tile">
@@ -496,7 +499,7 @@
                 <use xlink:href="images/main-page_icons-sprite.svg#location"></use>
               </svg>
             </div>
-            <div class="apartments-tile__title">Транспортная доступность</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+            <div class="apartments-tile__title">Транспортная доступность</div><a class="apartments-tile__link link" href="#">Смотреть квартиры объекта</a>
           </div>
           <!--SLIDER TILE-->
           <div class="apartments-tile">
@@ -509,7 +512,7 @@
                 <use xlink:href="images/main-page_icons-sprite.svg#interest-points"></use>
               </svg>
             </div>
-            <div class="apartments-tile__title">Развитая ифраструктура </div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+            <div class="apartments-tile__title">Развитая ифраструктура </div><a class="apartments-tile__link link" href="#">Смотреть квартиры объекта</a>
           </div>
           <!--SLIDER TILE-->
           <div class="apartments-tile">
@@ -522,7 +525,7 @@
                 <use xlink:href="images/main-page_icons-sprite.svg#layout"></use>
               </svg>
             </div>
-            <div class="apartments-tile__title">Множество планировок</div><a class="apartments-tile__link link" href="">Смотреть квартиры объекта</a>
+            <div class="apartments-tile__title">Множество планировок</div><a class="apartments-tile__link link" href="#">Смотреть квартиры объекта</a>
           </div>
         </div>
       </div>
@@ -540,12 +543,10 @@
           <label class="contact-form__title" for="email">EMAIL (НЕ ОБЯЗАТЕЛЬНО)
             <input class="contact-form__field" id="email" type="email"/>
           </label>
-          <div class="contact-form__checkbox">
+          <label class="contact-form__checkbox contact-form__title" for="check">Я даю согласие на обработку моих персональных данных согласно 
             <input class="contact-form__field" id="check" type="checkbox"/>
-            <div class="contact-form__text">
-              <label class="contact-form__title" for="check">Я даю согласие на обработку моих персональных данных согласно </label><a class="link contact-form__link" href="#">политике конфиденциальности </a>
-            </div>
-          </div>
+            <div class="contact-form__custom-check"></div><a class="link contact-form__link" href="#">политике конфиденциальности </a>
+          </label>
           <button class="btn contact-form__btn" type="submit">Отправить запрос</button>
         </form>
       </div>
@@ -558,12 +559,10 @@
             <h5 class="footer-address__title">Наши офисы</h5><a class="footer-link" href="#">г.Полтава, ул. А.Кукоби, 12</a><a class="footer-link" href="#">г.Миргород, ул.Победы,10, оф.1</a><a class="footer-link" href="#">Время работы: 9:00 – 18:00</a>
           </div>
           <div class="footer-logo"><a class="link" href="#"> 
-              <svg data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800">
+              <svg>
                 <use xlink:href="images/main-page_icons-sprite.svg#logo"></use>
               </svg></a></div>
-          <div class="footer-contacts">
-            <h5 class="footer-contacts__title">Наши офисы</h5><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-82</a>
-          </div>
+          <div class="footer-contacts"><a class="footer-link" href="mailto:angrobud@gmail.com"> angrobud@gmail.com</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-83</a><a class="footer-link" href="tel=+380509915883">+38(050) 991-58-82</a></div>
           <div class="footer-newsletter">
             <!--FORM START-->
             <form class="footer-newsletter__form" action="">
@@ -609,26 +608,32 @@
     <!--FOOTER END--><!-- modal -->
     <div class="modal">
       <div class="modal__content">
-        <form class="grid" action="">
-          <fieldset>
-            <legend>Оставьте координаты, и мы с вами свяжемся</legend>
-          </fieldset>
-          <label for="username">Ваше имя
-            <input id="username" type="text" required="required"/>
+        <form class="modal__form grid container" action="">
+          <h4 class="modal__headline">Оставьте координаты, и мы с вами свяжемся</h4>
+          <label class="modal__label" for="modal-username">Ваше имя
+            <input class="modal__field" id="modal-username" type="text" required="required"/>
           </label>
-          <label for="tel">Телефон
-            <input id="tel" type="tel" required="required"/>
+          <label class="modal__label" for="modal-tel">Телефон
+            <input class="modal__field" id="modal-tel" type="tel" required="required"/>
           </label>
-          <label for="email">EMAIL (НЕ ОБЯЗАТЕЛЬНО)
-            <input id="email" type="email"/>
+          <label class="modal__label" for="modal-email">EMAIL (НЕ ОБЯЗАТЕЛЬНО)
+            <input class="modal__field" id="modal-email" type="email"/>
           </label>
-          <label for="check">Я даю согласие на обработку моих персональных данных согласно <a>политике конфиденциальности</a>
-            <input id="check" type="checkbox"/>
+          <label class="modal__checkbox" for="modal-check">Я даю согласие на обработку моих персональных данных согласно 
+            <input class="modal__check" id="modal-check" type="checkbox"/>
+            <div class="modal__custom-check"></div><a class="modal__link link--active" href="#">политике конфиденциальности         </a>
           </label>
-          <button>Отправить запрос</button>
+          <button class="btn modal__btn" type="submit">Отправить запрос</button>
+          <div class="modal__close">
+            <div class="close"></div>
+          </div>
         </form>
       </div>
-      <button class="close"></button>
+    </div>
+    <div class="modal-video">
+      <div class="modal-video__content"><iframe width="2379" height="1003" src="https://www.youtube.com/embed/lxqG2UTpGUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="modal-video__close"></div>
+      </div>
     </div><!-- modal end-->                  
 <!--build:js js/main.min.js -->
     <script src="js/libs/jquery.min.js"></script>
