--- a/app/index.html
+++ b/app/index.html
@@ -194,13 +194,16 @@
             <!-- TILE END-->
           </div>
           <!--SLIDER END    -->
-          <div class="about-btn"><a class="arrow-btn arrow-btn--dark" href="#about">
+          <div class="about-btn">
+            <div class="arrow-btn arrow-btn--dark">
               <div class="arrow-btn__icon">
                 <svg class="icon">
                   <use xlink:href="images/main-page_icons-sprite.svg#play-button"></use>
                 </svg>
               </div>
-              <p class="arrow-btn__text">Смотреть видео</p></a></div>
+              <p class="arrow-btn__text">Смотреть видео</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
