--- a/app/index.html
+++ b/app/index.html
@@ -544,18 +544,18 @@
       <div class="container">
         <form class="grid contact-form" action="">
           <h4 class="contact-form__headline">С удовольствием проконсультируем Вас!</h4>
-          <label class="contact-form__title" for="username">Ваше имя
-            <input class="contact-form__field" id="username" type="text" required="required"/>
+          <label class="contact-form__title" for="contact-username">Ваше имя
+            <input class="contact-form__field" id="contact-username" type="text" required="required"/><span class="alert__text contact__user-text">Ваше имя не указано</span>
           </label>
-          <label class="contact-form__title" for="tel">Телефон
-            <input class="contact-form__field" id="tel" type="tel" required="required"/>
+          <label class="contact-form__title" for="contact-tel">Телефон
+            <input class="contact-form__field" id="contact-tel" type="tel" required="required" placeholder="+380" pattern="[+]d{3}s[(]d{2}[)]sd{3}[-]d{2}[-]d{2}"/><span class="alert__text contact__tel-text">Телефон не указан</span>
           </label>
           <label class="contact-form__title" for="email">EMAIL (НЕ ОБЯЗАТЕЛЬНО)
             <input class="contact-form__field" id="email" type="email"/>
           </label>
-          <label class="contact-form__checkbox contact-form__title" for="check">Я даю согласие на обработку моих персональных данных согласно 
-            <input class="contact-form__field" id="check" type="checkbox"/>
-            <div class="contact-form__custom-check"></div><a class="contact-form__link" href="#">политике конфиденциальности </a>
+          <label class="contact-form__checkbox contact-form__title" for="contact-check">Я даю согласие на обработку моих персональных данных согласно 
+            <input class="contact-form__field" id="contact-check" type="checkbox" checked="checked"/>
+            <div class="contact-form__custom-check"></div><a class="contact-form__link" href="#">политике конфиденциальности </a><span class="alert__text contact__check-text">Обязательное поле </span>
           </label>
           <button class="btn contact-form__btn" type="submit">Отправить запрос</button>
         </form>
@@ -579,7 +579,7 @@
               <h5 class="footer-newsletter__headline">Будьте в курсе спецпредложений   </h5>
               <label class="footer-newsletter__title" for="newsletter">Ваш e-mail</label>
               <input class="footer-newsletter__field" id="newsletter" type="text"/>
-              <button class="btn footer-newsletter__btn">Хочу быть в курсе!</button>
+              <button class="btn footer-newsletter__btn" type="submit">Хочу быть в курсе!</button>
             </form>
             <!--FORM END          -->
           </div><a class="arrow-btn footer-btn" href="#">
@@ -621,17 +621,17 @@
         <form class="modal__form grid container" action="">
           <h4 class="modal__headline">Оставьте координаты, и мы с вами свяжемся</h4>
           <label class="modal__label" for="modal-username">Ваше имя
-            <input class="modal__field" id="modal-username" type="text" required="required"/>
+            <input class="modal__field" id="modal-username" type="text" required="required"/><span class="alert__text modal__user-text">Ваше имя не указано</span>
           </label>
           <label class="modal__label" for="modal-tel">Телефон
-            <input class="modal__field" id="modal-tel" type="tel" required="required"/>
+            <input class="modal__field" id="modal-tel" type="tel" required="required" placeholder="+380" pattern="[+]d{3}s[(]d{2}[)]sd{3}[-]d{2}[-]d{2}"/><span class="alert__text modal__tel-text">Телефон не указан</span>
           </label>
           <label class="modal__label" for="modal-email">EMAIL (НЕ ОБЯЗАТЕЛЬНО)
             <input class="modal__field" id="modal-email" type="email"/>
           </label>
           <label class="modal__checkbox" for="modal-check">Я даю согласие на обработку моих персональных данных согласно 
-            <input class="modal__check" id="modal-check" type="checkbox"/>
-            <div class="modal__custom-check"></div><a class="modal__link" href="#">политике конфиденциальности         </a>
+            <input class="modal__check" id="modal-check" type="checkbox" checked="checked"/>
+            <div class="modal__custom-check"></div><a class="modal__link" href="#">политике конфиденциальности</a><span class="alert__text modal__check-text">Обязательное поле       </span>
           </label>
           <button class="btn modal__btn" type="submit">Отправить запрос</button>
           <div class="modal__close">
@@ -641,7 +641,7 @@
       </div>
     </div>
     <div class="modal-video">
-      <div class="modal-video__content"><iframe width="2379" height="1003" src="https://www.youtube.com/embed/lxqG2UTpGUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="modal-video__content"><iframe src="https://www.youtube.com/embed/lxqG2UTpGUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div class="modal-video__close"></div>
       </div>
     </div><!-- modal end-->                  
