--- a/app/index.html
+++ b/app/index.html
@@ -54,8 +54,8 @@
     </div>
     <div class="menu">
       <ul class="menu-top">     
-        <li class="menu-item"><a class="link--active" href="#">Главная</a></li>
-        <li class="menu-item"><a href="#">Объекты</a></li>
+        <li class="menu-item"><a class="link--active" href="index.html">Главная</a></li>
+        <li class="menu-item"><a href="object.html">Объекты</a></li>
         <li class="menu-item"><a href="#">Квартиры</a></li>
         <li class="menu-item"><a href="#">Галерея</a></li>
         <li class="menu-item"><a href="#">Блог</a></li>
@@ -647,6 +647,7 @@
     </div><!-- modal end-->                  
 <!--build:js js/main.min.js -->
     <script src="js/libs/jquery.min.js"></script>
+    <script src="js/libs/jquery-ui.js"></script>
     <script src="js/libs/aos.js"></script>
     <script src="js/libs/slick.min.js"></script>
     <script src="js/main.js"></script><!--endbuild-->
